Fixed issue with image-grid where .gallery-pictures with different resolution or orientations would mess up the styling creating big white spaces. Now all the images are forced with object-fit to a specific height

--- a/src/product-grid/style.scss
+++ b/src/product-grid/style.scss
@@ -1,6 +1,8 @@
 .veldhuizen {
 	&__container {
 		&--product-grid {
+			// Originally made as/for product image grid, later realized this is just a general image grid block
+			// Look at this first part as the general styling, after setting the style, all the changes come for specific pages that use the block
 			position: relative;
 			padding-left: 1.2rem;
 			padding-right: 1.2rem;
@@ -123,22 +125,23 @@
 
 				#big-image-wrapper {
 					width: 100%;
+					
 
 					#big-image {
 						object-fit: cover;
 						width: 100%;
-						max-height: 620px;
+						max-height: 385px;
 						height: auto;
 						display: block;
 						margin-top: 1rem;
 						// opacity: 1;
 
 						@include Responsive($tabletBreakpoint) {
-							max-height: 450px;
+							max-height: 300px;
 						}
 
 						@include Responsive(820px) {
-							max-height: 400px;
+							max-height: 260px;
 						}
 					}
 				}
@@ -151,24 +154,77 @@
 
 					img {
 						transition: .1s ease-in-out;
-
+						object-fit: cover;
+						width: 100%;
+						max-height: 56px;
+						@include Responsive(1000px) {
+							max-height: 45px;
+						}
+						@include Responsive(825px) {
+							max-height: 40px;
+						}
+						@include Responsive(745px){
+							max-height: 60px;
+						}
+						@include Responsive(660px){
+							max-height: 50px;
+						}
+						@include Responsive(500px){
+							max-height: 40px;
+						}
+						@include Responsive(455px){
+							max-height: 35px;
+						}
+						@include Responsive(415px){
+							max-height: 30px;
+						}
+						@include Responsive(350px){
+							max-height: 25px;
+						}
 					}
 
 					img:hover {
 						transform: scale(1.1);
 						image-rendering: -moz-crisp-edges;
-						/* Firefox */
 						image-rendering: -o-crisp-edges;
-						/* Opera */
 						image-rendering: -webkit-optimize-contrast;
-						/* Webkit (non-standard naming) */
 						image-rendering: crisp-edges;
 					}
+					
 				}
 
 
 				.gallery-pictures-wrapper:nth-of-type(6n+7) {
 					margin-right: 0;
+				}
+
+				@include Responsive($tabletSmallBreakpoint) {
+					width: 100%;
+					
+					#big-image-wrapper {
+						margin-top: 30px;
+						#big-image {
+							max-height: 350px;
+						}
+					}		
+				}
+
+				// Deze mess is omdat fotos binnen 1 product allemaal verschillende resoluties hebben
+				// Had dit anders kunnen oplossen met object-fit, maar zit echt al te diep in sinds dit praktisch 1 van de eerste elementen in GB was
+				@include Responsive(600px) {
+					#big-image-wrapper #big-image {
+						max-height: 300px;
+					}
+				}
+				@include Responsive(535px) {
+					#big-image-wrapper #big-image {
+						max-height: 250px;
+					}
+				}
+				@include Responsive(450px) {
+					#big-image-wrapper #big-image {
+						max-height: 200px;
+					}
 				}
 			}
 		}
